Create basic login functionality with sessions and omniauth

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,2 +1,6 @@
-<h1>Welcome#home</h1>
-<p>Find me in app/views/welcome/home.html.erb</p>
+<h1>Beer List</h1>
+<h2>Share your favorite beers and find new beers to try.</h2>
+<div class="link"><%= link_to "Create a New Account", new_user_path %></div>
+<br />
+<p>- Or -</p>
+<div class="link"> <%= link_to "Sign In", signin_path %></div>
