--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,124 @@
  *= require_tree .
  *= require_self
  */
+html, body {
+    height: 100%;
+    width: 100%;
+    font-family: 'Roboto', sans-serif;
+  }
+
+body {
+  overflow: visible !important;
+  background: -webkit-linear-gradient(45deg, #085078 10%, #85d8ce 90%);
+  background: -moz-linear-gradient(45deg, #085078 10%, #85d8ce 90%);
+  background: -ms-linear-gradient(45deg, #085078 10%, #85d8ce 90%);
+  background: -o-linear-gradient(45deg, #085078 10%, #85d8ce 90%);
+  background: linear-gradient(45deg, #085078 10%, #85d8ce 90%);
+ }
+
+.wrapper {
+    max-width: 1000px;
+    height: auto;
+  margin: 50px auto;
+  text-align: center;
+  position: relative;
+  background: white;
+  border: 0 none;
+  border-radius: 3px;
+  box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
+  padding: 20px 30px;
+  box-sizing: border-box;
+  position: relative;
+  }
+
+  .box {
+    max-width: 300px;
+    margin: 20px auto;
+    border: 1px solid gray;
+    padding: 10px;
+  }
+
+  a {
+  	color:  inherit;
+  	text-decoration: none;
+  }
+
+  .link {
+   /* RESET */
+   text-decoration: none;
+   line-height: 1;
+   
+   position: relative;
+   z-index: 0;
+   display: inline-block;
+   padding: 5px 5px;
+   overflow: hidden;
+   color: #333;
+   vertical-align: bottom;
+   transition: color .3s ease-out;
+}
+
+.link::before {
+   content: "";
+   position: absolute;
+   z-index: -1;
+   top: 0;
+   left: 0;
+   transform: translateY(calc(100% - 2px));
+   width: 100%;
+   height: 100%;
+   background-image: linear-gradient(60deg, #64b3f4 0%, #c2e59c 100%);
+   transition: transform .25s ease-out;
+}
+
+.link:hover { 
+   color: #fff; 
+}
+.link:hover::before {
+   transform: translateY(0);
+   transition: transform .25s ease-out;
+}
+
+.blue {
+	color: #64b3f4;
+}
+
+.underline {
+  color: #64b3f4;
+  font-size: .8em;
+}
+
+.underline:hover {
+
+  	text-decoration: underline;
+}
+
+.show_link:hover {
+color:  inherit;
+  	text-decoration: underline;
+}
+
+.big_button {
+   min-width: 100px;
+  background: #64b3f4;
+  font-weight: bold;
+  color: white;
+  border: 0 none;
+  border-radius: 1px;
+  cursor: pointer;
+  padding: 10px 5px;
+  margin: 10px 5px;
+}
+
+.big_button:hover,
+.big_button:focus {
+  box-shadow: 0 0 0 2px white, 0 0 0 3px #27AE60;
+}
+
+.blue.small_caps{
+  font-variant: small-caps;
+  color: #64b3f4;
+}
+.small_caps {
+  font-variant: small-caps;
+}
