--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,31 @@
-<h1>New User</h1>
-
-<%= render 'form', user: @user %>
-
-<%= link_to 'Back', users_path %>
+<h1>Sign Up</h1>
+<% if @user.errors.any? %>
+  <div class="notice">
+    <p>There were some errors:</p>
+    <br>
+    <% @user.errors.full_messages.each do |message| %>
+      <p><%= message %></p>
+    <% end %>
+  </div>
+<% end %>
+<div>
+  <div class="box">
+    <%= form_for @user, controller: 'users', action: 'create' do |f| %>
+      <div>
+        <%= f.label :name %>
+        <%= f.text_field :name %>
+      </div>
+      <div>
+        <%= f.label :email %>
+        <%= f.text_field :email %>
+      </div>
+      <div>
+        <%= f.label :password %>
+        <%= f.text_field :password %>
+      </div>
+      <div>
+        <%= f.submit "Create Account", class: "big_button" %>
+      </div>
+    <% end %>
+  </div>
+</div>
