--- a/app/views/beers/edit.html.erb
+++ b/app/views/beers/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Beer</h1>
-
-<%= render 'form', beer: @beer %>
-
-<%= link_to 'Show', @beer %> |
-<%= link_to 'Back', beers_path %>
+<h1>New Beer</h1>
+<%= render 'form' %>
+<div id="app-container">
+</div>
