--- a/app/views/beers/new.html.erb
+++ b/app/views/beers/new.html.erb
@@ -1,5 +1,4 @@
 <h1>New Beer</h1>
-
-<%= render 'form', beer: @beer %>
-
-<%= link_to 'Back', beers_path %>
+<%= render 'form' %>
+<div id="app-container">
+</div>
