Change update resource to render @beer if beer successfully updated; added hide function beer_form after form is successfully submitted.

--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -29,4 +29,6 @@
     <%= f.submit %>
   </div>
 <% end %>
+<p class="link"><%= link_to 'All Beers', beers_path %></p>
+<br />
 <p class="link"><%= link_to "Back to Profile", user_path(current_user) %></p>
