Add remove method to comment_box class so that the click event doesn't keep appending the same comment to the app-container.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -50,6 +50,14 @@ body {
     padding: 10px;
   }
 
+  .comment_box {
+    max-width: 300px;
+    margin: 20px auto;
+    border: 1px solid gray;
+    padding: 10px;
+
+  }
+
   a {
   	color:  inherit;
   	text-decoration: none;
