--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -21,7 +21,7 @@
       </div>
       <div>
         <%= f.label :password %>
-        <%= f.text_field :password %>
+        <%= f.password_field :password %>
       </div>
       <div>
         <%= f.submit "Create Account", class: "big_button" %>
